--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ speed-measure-plugin*.json
 .settings/
 *.sublime-workspace
 
+.firebaserc
+.firebase/
+firebase.json
+
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
